--- a/OOP/Programacion orientada a objetos-Solucion.ipynb
+++ b/OOP/Programacion orientada a objetos-Solucion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classe de Orientacion de objetos"
+    "# Orientación de objetos"
    ]
   },
   {
@@ -12,11 +12,11 @@
    "metadata": {},
    "source": [
     "La orientación a objetos es un paradigma de programación dónde los la unidad básica es el objeto. Un objecto o clase se define como cualquier cosa que queramos representar en el ordenador que tengo funciones especificas.\n",
-    "Es una forma muy util para programar y las mas utilizada.\n",
-    "El codigo orientado a objetos nos aporta:\n",
+    "Es una forma muy útil para programar y las mús utilizada.\n",
+    "El código orientado a objetos nos aporta:\n",
     "* __Modularidad__\n",
-    "* __Reutilizacion de codigo__\n",
-    "* __Mejor manejo de errores de programacion__\n",
+    "* __Reutilización de código__\n",
+    "* __Mejor manejo de errores de programación__\n",
     "* __Facilidad de cambiar el código__"
    ]
   },
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sin orientazión a objetos"
+    "## Sin orientación a objetos"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Y cuando quisieramos hacer la funcion correr deberiamos comprovar que en efecto es un perro. Lo mismo pasaria con olisquear y con jugar deberiamos comprobar que es un pastor aleman y un golden retriever respectivamente"
+    "Y cuando quisieramos hacer la funcion correr deberiamos comprovar que en efecto es un perro. Lo mismo pasaría con olisquear y con jugar deberíamos comprobar que es un pastor aleman y un golden retriever respectivamente"
    ]
   },
   {
@@ -148,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El problema de programar de esta forma es que cada vez que creas una función tienes que controloar que animal la puede usar y que comportamiento tiene para cada raza.\n",
+    "El problema de programar de esta forma es que cada vez que creas una función tienes que controlar que animal la puede usar y que comportamiento tiene para cada raza.\n",
     "\n",
     "Esto para programas reales se transforma en un problema real ya que el numero de comprobaciones es mucho mayor.\n",
     "\n",
@@ -161,7 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Con orientazion a objetos"
+    "## Con orientación a objetos"
    ]
   },
   {
