--- a/OOP/Programacion orientada a objetos.ipynb
+++ b/OOP/Programacion orientada a objetos.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classe de Orientacion de objetos"
+    "# Clase de Orientación de objetos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La orientación a objetos es un paradigma de programación dónde los la unidad básica es el objeto. Un objecto o clase se define como cualquier cosa que queramos representar en el ordenador que tengo funciones especificas.\n",
-    "Es una forma muy util para programar y las mas utilizada.\n",
-    "El codigo orientado a objetos nos aporta:\n",
+    "La orientación a objetos es un paradigma de programación donde los la unidad básica es el objeto. Un objecto o clase se define como cualquier cosa que queramos representar en el ordenador que tengo funciones específicas.\n",
+    "Es una forma muy ítil para programar y las más utilizada.\n",
+    "El código orientado a objetos nos aporta:\n",
     "* __Modularidad__\n",
-    "* __Reutilizacion de codigo__\n",
-    "* __Mejor manejo de errores de programacion__\n",
+    "* __Reutilización de código__\n",
+    "* __Mejor manejo de errores de programación__\n",
     "* __Facilidad de cambiar el código__"
    ]
   },
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sin orientazión a objetos"
+    "## Sin orientación a objetos"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Y cuando quisieramos hacer la funcion correr deberiamos comprovar que en efecto es un perro. Lo mismo pasaria con olisquear y con jugar deberiamos comprobar que es un pastor aleman y un golden retriever respectivamente"
+    "Y cuando quisieramos hacer la funcion correr deberiamos comprobar que en efecto es un perro. Lo mismo pasaria con olisquear y con jugar deberiamos comprobar que es un pastor aleman y un golden retriever respectivamente"
    ]
   },
   {
@@ -161,14 +161,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Con orientazion a objetos"
+    "## Con orientación a objetos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La orientazion a objetos es una forma de ordenar el código de forma que sea más fácil de trabajar con el. Aunque pueda parecer más trabajo al empezar hace que el código sea más escalable a la larga."
+    "La orientación a objetos es una forma de ordenar el código de forma que sea más fácil de trabajar con el. Aunque pueda parecer más trabajo al empezar hace que el código sea más escalable a la larga."
    ]
   },
   {
@@ -588,11 +588,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": []
   },
   {
